# protobuf_minimal

./: .gitignore  CMakeLists.txt  README.md  addressbook.proto  main.cpp  person.proto
